--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         .navbar-nav{
             font-family: 'Black Ops One', cursive;
         }
+        .well{
+            background: chartreuse;
+        }
     </style>
 </head>
 <body>
@@ -115,7 +118,7 @@
 </div>
 
 <footer class="container-fluid text-center">
-    <p>WOOHOO</p>
+    <p>-->From Maddi<--</p>
     <div class="thumbnail">
         <img width="3000 30" src="https://i.ebayimg.com/images/g/3HgAAOSwipdaoYlQ/s-l300.jpg">
     </div>
